--- a/module-1/index.html
+++ b/module-1/index.html
@@ -35,7 +35,16 @@
             <div ng-show="!error" class="alert alert-success">{{message}}</div>
 
           </div>
+          <div class="form-group ">
+            <div class="alert alert-success">
+            {{specialMess}}
+            </div>
+          </div>
         </form>
+
+          <div ng-controller="control2 as c2">
+            {{c2.raja}}
+          </div>
         </div>
 
     </body>
